--- a/cars/Dockerfile.dev
+++ b/cars/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM python:3.8-alpine
 ENV PYTHONUNBUFFERED 1
-RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev libffi-dev
+RUN apk update && apk add postgresql-dev gcc musl-dev libffi-dev
 WORKDIR /code
 COPY ./requirements /code/requirements
 RUN pip install -r requirements
