--- a/cars/Dockerfile.dev
+++ b/cars/Dockerfile.dev
@@ -7,3 +7,4 @@ RUN pip install -r requirements
 COPY . /code
 RUN chmod +x /code/entrypoint.sh
 ENTRYPOINT ["/code/entrypoint.sh"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
